// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | Card Basic Card 1`] = `
<div
  className="Card__StyledCard-sc-1e5czjc-0 gwDvCn"
>
  <div
    className="Cardstories__StyledContent-eexhxe-0 kGEqlI"
  >
    A Card as a div containing content
  </div>
</div>
`;

exports[`Storyshots Atoms | Card Card rendered with different html tags 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Section
    </div>
    <div>
      <section
        className="Card__StyledCard-sc-1e5czjc-0 gwDvCn"
      >
        <div
          className="Cardstories__StyledContent-eexhxe-0 kGEqlI"
        >
          A Card as a section containing content
        </div>
      </section>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Article
    </div>
    <div>
      <article
        className="Card__StyledCard-sc-1e5czjc-0 gwDvCn"
      >
        <div
          className="Cardstories__StyledContent-eexhxe-0 kGEqlI"
        >
          A Card as a article containing content
        </div>
      </article>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid CssGrid with custom gutter 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 kAoCvY"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa jZclqz"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa cSvSRX"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Top
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa cTgXiO"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Content
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa htfucg"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid CssGrid with custom templateColumns 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 htHwvF"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa jZclqz"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa cSvSRX"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Top
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa cTgXiO"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Content
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa htfucg"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid CssGrid with different layouts for different screen sizes 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 jIOgaG"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa dSufaw"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa emIQMK"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Top
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa czSiSC"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Content
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa dQUeqc"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid CssGrid with object as gutter and custom sized columns 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 fvIXEW"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa dBpfEh"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa eHGQpe"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Top
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa ezZumu"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Content
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa cRNBno"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Messages
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa jODgqu"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Order
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa jHKUNH"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid Simple CssGrid 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 dmRbLA"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa bRGSev"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Header
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa ioWuYc"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Content
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa YvQdv"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Menu
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa eKmgOm"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Ads
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa hPuVlu"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Footer
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Currency Primary default 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 cmCWWJ"
>
  SEK 234,234.00
</span>
`;

exports[`Storyshots Atoms | Currency Secondary default 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 laXMaY"
>
  SEK 234,234.00
</span>
`;

exports[`Storyshots Atoms | Currency Tertiary default 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 kBKleW"
>
  SEK 234,234.00
</span>
`;

exports[`Storyshots Atoms | Currency Title1 default 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 iUYKst"
>
  SEK 234,234.00
</span>
`;

exports[`Storyshots Atoms | Currency Title3 default 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 joblfr"
>
  SEK 234,234.00
</span>
`;

exports[`Storyshots Atoms | Development Primary 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Positive value
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 gcIsAz"
      >
        ▲
        +
        5.4
        %
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Zero value
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 cmCWWJ"
      >
        0
        0
        %
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Negative value
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 hCpHGw"
      >
        ▼
        -2.1
        %
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Development Secondary 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Positive value
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 bmOtmq"
      >
        ▲
        +
        5.4
        %
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Zero value
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 laXMaY"
      >
        0
        0
        %
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Negative value
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 jWluYu"
      >
        ▼
        -2.1
        %
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Development Tertiary 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Positive value
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 ekeaEF"
      >
        ▲
        +
        5.4
        %
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Zero value
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 kBKleW"
      >
        0
        0
        %
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Negative value
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 eumSjM"
      >
        ▼
        -2.1
        %
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flag Available flags 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      ca
    </div>
    <div>
      <svg
        className="Flag__StyledFlag-sc-14ojzvi-0 brFYNI"
        fill="#28ff09"
        fillOpacity="14.118"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <g
          fillOpacity="1"
          transform="translate(74.118) scale(.9375)"
        >
          <path
            d="M81.137 0h362.276v512H81.137z"
            fill="#fff"
          />
          <path
            d="M-100 0H81.138v512H-100zm543.413 0H624.55v512H443.414zM135.31 247.41l-14.067 4.808 65.456 57.446c4.95 14.764-1.72 19.116-5.97 26.86l71.06-9.02-1.85 71.512 14.718-.423-3.21-70.918 71.13 8.432c-4.402-9.297-8.32-14.233-4.247-29.098l65.414-54.426-11.447-4.144c-9.36-7.222 4.044-34.784 6.066-52.178 0 0-38.195 13.135-40.698 6.262l-9.727-18.685-34.747 38.17c-3.796.91-5.413-.6-6.304-3.808l16.053-79.766-25.42 14.297c-2.128.91-4.256.125-5.658-2.355l-24.45-49.06-25.21 50.95c-1.9 1.826-3.803 2.037-5.382.796l-24.204-13.578 14.53 79.143c-1.156 3.14-3.924 4.025-7.18 2.324l-33.216-37.737c-4.345 6.962-7.29 18.336-13.033 20.885-5.744 2.387-24.98-4.823-37.873-7.637 4.404 15.895 18.176 42.302 9.46 50.957z"
            fill="#bf0a30"
          />
        </g>
        <title>
          Canada
        </title>
      </svg>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      de
    </div>
    <div>
      <svg
        className="Flag__StyledFlag-sc-14ojzvi-0 brFYNI"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <g
          fillRule="evenodd"
          strokeWidth="1pt"
        >
          <path
            d="M0 320h640v160.002H0z"
            fill="#ffce00"
          />
          <path
            d="M0 0h640v160H0z"
          />
          <path
            d="M0 160h640v160H0z"
            fill="#d00"
          />
        </g>
        <title>
          Germany
        </title>
      </svg>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      eu
    </div>
    <div>
      <svg
        className="Flag__StyledFlag-sc-14ojzvi-0 brFYNI"
        role="img"
        viewBox="0 0 640 480"
      >
        <defs>
          <g
            id="eu_d"
          >
            <g
              id="eu_b"
            >
              <path
                d="M0-1l-.31.95.477.156z"
                id="eu_a"
              />
              <use
                transform="scale(-1 1)"
                xlinkHref="#eu_a"
              />
            </g>
            <g
              id="eu_c"
            >
              <use
                transform="rotate(72)"
                xlinkHref="#eu_b"
              />
              <use
                transform="rotate(144)"
                xlinkHref="#eu_b"
              />
            </g>
            <use
              transform="scale(-1 1)"
              xlinkHref="#eu_c"
            />
          </g>
        </defs>
        <path
          d="M0 0h640v480H0z"
          fill="#039"
        />
        <g
          fill="#fc0"
          transform="translate(320 242.263) scale(23.7037)"
        >
          <use
            height="100%"
            width="100%"
            xlinkHref="#eu_d"
            y="-6"
          />
          <use
            height="100%"
            width="100%"
            xlinkHref="#eu_d"
            y="6"
          />
          <g
            id="eu_e"
          >
            <use
              height="100%"
              width="100%"
              x="-6"
              xlinkHref="#eu_d"
            />
            <use
              height="100%"
              transform="rotate(-144 -2.344 -2.11)"
              width="100%"
              xlinkHref="#eu_d"
            />
            <use
              height="100%"
              transform="rotate(144 -2.11 -2.344)"
              width="100%"
              xlinkHref="#eu_d"
            />
            <use
              height="100%"
              transform="rotate(72 -4.663 -2.076)"
              width="100%"
              xlinkHref="#eu_d"
            />
            <use
              height="100%"
              transform="rotate(72 -5.076 .534)"
              width="100%"
              xlinkHref="#eu_d"
            />
          </g>
          <use
            height="100%"
            transform="scale(-1 1)"
            width="100%"
            xlinkHref="#eu_e"
          />
        </g>
        <title>
          EU
        </title>
      </svg>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      fr
    </div>
    <div>
      <svg
        className="Flag__StyledFlag-sc-14ojzvi-0 brFYNI"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <g
          fillRule="evenodd"
          strokeWidth="1pt"
        >
          <path
            d="M0 0h640v480H0z"
            fill="#fff"
          />
          <path
            d="M0 0h213.337v480H0z"
            fill="#00267f"
          />
          <path
            d="M426.662 0H640v480H426.662z"
            fill="#f31830"
          />
        </g>
        <title>
          France
        </title>
      </svg>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      ru
    </div>
    <div>
      <svg
        className="Flag__StyledFlag-sc-14ojzvi-0 brFYNI"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <g
          fillRule="evenodd"
          strokeWidth="1pt"
        >
          <path
            d="M0 0h640v480H0z"
            fill="#fff"
          />
          <path
            d="M0 160.003h640V480H0z"
            fill="#0039a6"
          />
          <path
            d="M0 319.997h640V480H0z"
            fill="#d52b1e"
          />
        </g>
        <title>
          Russia
        </title>
      </svg>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      gb
    </div>
    <div>
      <svg
        className="Flag__StyledFlag-sc-14ojzvi-0 brFYNI"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <defs>
          <clipPath
            id="gb_a"
          >
            <path
              d="M-85.333 0h682.67v512h-682.67z"
              fillOpacity=".67"
            />
          </clipPath>
        </defs>
        <g
          clipPath="url(#gb_a)"
          transform="translate(80) scale(.94)"
        >
          <g
            strokeWidth="1pt"
          >
            <path
              d="M-256 0H768.02v512.01H-256z"
              fill="#006"
            />
            <path
              d="M-256 0v57.244l909.535 454.768H768.02V454.77L-141.515 0H-256zM768.02 0v57.243L-141.515 512.01H-256v-57.243L653.535 0H768.02z"
              fill="#fff"
            />
            <path
              d="M170.675 0v512.01h170.67V0h-170.67zM-256 170.67v170.67H768.02V170.67H-256z"
              fill="#fff"
            />
            <path
              d="M-256 204.804v102.402H768.02V204.804H-256zM204.81 0v512.01h102.4V0h-102.4zM-256 512.01L85.34 341.34h76.324l-341.34 170.67H-256zM-256 0L85.34 170.67H9.016L-256 38.164V0zm606.356 170.67L691.696 0h76.324L426.68 170.67h-76.324zM768.02 512.01L426.68 341.34h76.324L768.02 473.848v38.162z"
              fill="#c00"
            />
          </g>
        </g>
        <title>
          Great Britain
        </title>
      </svg>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      dk
    </div>
    <div>
      <svg
        className="Flag__StyledFlag-sc-14ojzvi-0 brFYNI"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <path
          d="M0 0h640.1v480H0z"
          fill="#c60c30"
        />
        <path
          d="M205.714 0h68.57v480h-68.57z"
          fill="#fff"
        />
        <path
          d="M0 205.714h640.1v68.57H0z"
          fill="#fff"
        />
        <title>
          Denmark
        </title>
      </svg>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      fi
    </div>
    <div>
      <svg
        className="Flag__StyledFlag-sc-14ojzvi-0 brFYNI"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <path
          d="M0 0h640v480H0z"
          fill="#fff"
        />
        <path
          d="M0 174.545h640v130.909H0z"
          fill="#003580"
        />
        <path
          d="M175.455 0h130.909v480H175.455z"
          fill="#003580"
        />
        <title>
          Finland
        </title>
      </svg>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      no
    </div>
    <div>
      <svg
        className="Flag__StyledFlag-sc-14ojzvi-0 brFYNI"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <path
          d="M0 0h640v480H0z"
          fill="#ef2b2d"
        />
        <path
          d="M180 0h120v480H180z"
          fill="#fff"
        />
        <path
          d="M0 180h640v120H0z"
          fill="#fff"
        />
        <path
          d="M210 0h60v480h-60z"
          fill="#002868"
        />
        <path
          d="M0 210h640v60H0z"
          fill="#002868"
        />
        <title>
          Japan
        </title>
      </svg>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      se
    </div>
    <div>
      <svg
        className="Flag__StyledFlag-sc-14ojzvi-0 brFYNI"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <g
          transform="translate(50.082) scale(.9375)"
        >
          <g
            fillRule="evenodd"
            strokeWidth="1pt"
          >
            <path
              d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
              fill="#006aa7"
            />
            <path
              d="M-121.103 204.984h256v102.4h-256z"
              fill="#fecc00"
            />
            <path
              d="M133.843.01h102.4v511.997h-102.4z"
              fill="#fecc00"
            />
            <path
              d="M232.995 205.013h460.798v102.4H232.995z"
              fill="#fecc00"
            />
            <path
              d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
              fill="#006aa7"
            />
          </g>
        </g>
        <title>
          Sweden
        </title>
      </svg>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      us
    </div>
    <div>
      <svg
        className="Flag__StyledFlag-sc-14ojzvi-0 brFYNI"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <g
          fillRule="evenodd"
          transform="scale(.9375)"
        >
          <g
            strokeWidth="1pt"
          >
            <g
              fill="#bd3d44"
            >
              <path
                d="M0 0h972.81v39.385H0zM0 78.77h972.81v39.385H0zM0 157.54h972.81v39.385H0zM0 236.31h972.81v39.385H0zM0 315.08h972.81v39.385H0zM0 393.85h972.81v39.385H0zM0 472.62h972.81v39.385H0z"
              />
            </g>
            <g
              fill="#fff"
            >
              <path
                d="M0 39.385h972.81V78.77H0zM0 118.155h972.81v39.385H0zM0 196.925h972.81v39.385H0zM0 275.695h972.81v39.385H0zM0 354.465h972.81v39.385H0zM0 433.235h972.81v39.385H0z"
              />
            </g>
          </g>
          <path
            d="M0 0h389.12v275.69H0z"
            fill="#192f5d"
          />
          <g
            fill="#fff"
          >
            <path
              d="M32.427 11.8l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM97.28 11.8l3.541 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735H93.74zM162.136 11.8l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.269 6.734 3.54-10.896-9.269-6.735h11.458zM226.988 11.8l3.54 10.896h11.457l-9.269 6.735 3.54 10.896-9.268-6.734-9.27 6.734 3.541-10.896-9.27-6.735h11.458zM291.843 11.8l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM356.698 11.8l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.27 6.734 3.542-10.896-9.27-6.735h11.458z"
            />
            <g>
              <path
                d="M64.855 39.37l3.54 10.896h11.458L70.583 57l3.542 10.897-9.27-6.734-9.269 6.734L59.126 57l-9.269-6.734h11.458zM129.707 39.37l3.54 10.896h11.457L135.435 57l3.54 10.897-9.268-6.734-9.27 6.734L123.978 57l-9.27-6.734h11.458zM194.562 39.37l3.54 10.896h11.458L200.29 57l3.541 10.897-9.27-6.734-9.268 6.734L188.833 57l-9.269-6.734h11.457zM259.417 39.37l3.54 10.896h11.458L265.145 57l3.541 10.897-9.269-6.734-9.27 6.734L253.69 57l-9.27-6.734h11.458zM324.269 39.37l3.54 10.896h11.457L329.997 57l3.54 10.897-9.268-6.734-9.27 6.734L318.54 57l-9.27-6.734h11.458z"
              />
            </g>
            <g>
              <path
                d="M32.427 66.939l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM97.28 66.939l3.541 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735H93.74zM162.136 66.939l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.269 6.734 3.54-10.896-9.269-6.735h11.458zM226.988 66.939l3.54 10.896h11.457l-9.269 6.735 3.54 10.896-9.268-6.734-9.27 6.734 3.541-10.896-9.27-6.735h11.458zM291.843 66.939l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM356.698 66.939l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.27 6.734 3.542-10.896-9.27-6.735h11.458z"
              />
              <g>
                <path
                  d="M64.855 94.508l3.54 10.897h11.458l-9.27 6.734 3.542 10.897-9.27-6.734-9.269 6.734 3.54-10.897-9.269-6.734h11.458zM129.707 94.508l3.54 10.897h11.457l-9.269 6.734 3.54 10.897-9.268-6.734-9.27 6.734 3.541-10.897-9.27-6.734h11.458zM194.562 94.508l3.54 10.897h11.458l-9.27 6.734 3.541 10.897-9.27-6.734-9.268 6.734 3.54-10.897-9.269-6.734h11.457zM259.417 94.508l3.54 10.897h11.458l-9.27 6.734 3.541 10.897-9.269-6.734-9.27 6.734 3.542-10.897-9.27-6.734h11.458zM324.269 94.508l3.54 10.897h11.457l-9.269 6.734 3.54 10.897-9.268-6.734-9.27 6.734 3.541-10.897-9.27-6.734h11.458z"
                />
              </g>
            </g>
            <g>
              <path
                d="M32.427 122.078l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM97.28 122.078l3.541 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735H93.74zM162.136 122.078l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.269 6.734 3.54-10.896-9.269-6.735h11.458zM226.988 122.078l3.54 10.896h11.457l-9.269 6.735 3.54 10.896-9.268-6.734-9.27 6.734 3.541-10.896-9.27-6.735h11.458zM291.843 122.078l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM356.698 122.078l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.27 6.734 3.542-10.896-9.27-6.735h11.458z"
              />
              <g>
                <path
                  d="M64.855 149.647l3.54 10.897h11.458l-9.27 6.734 3.542 10.897-9.27-6.734-9.269 6.734 3.54-10.897-9.269-6.734h11.458zM129.707 149.647l3.54 10.897h11.457l-9.269 6.734 3.54 10.897-9.268-6.734-9.27 6.734 3.541-10.897-9.27-6.734h11.458zM194.562 149.647l3.54 10.897h11.458l-9.27 6.734 3.541 10.897-9.27-6.734-9.268 6.734 3.54-10.897-9.269-6.734h11.457zM259.417 149.647l3.54 10.897h11.458l-9.27 6.734 3.541 10.897-9.269-6.734-9.27 6.734 3.542-10.897-9.27-6.734h11.458zM324.269 149.647l3.54 10.897h11.457l-9.269 6.734 3.54 10.897-9.268-6.734-9.27 6.734 3.541-10.897-9.27-6.734h11.458z"
                />
              </g>
            </g>
            <g>
              <path
                d="M32.427 177.217l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM97.28 177.217l3.541 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735H93.74zM162.136 177.217l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.269 6.734 3.54-10.896-9.269-6.735h11.458zM226.988 177.217l3.54 10.896h11.457l-9.269 6.735 3.54 10.896-9.268-6.734-9.27 6.734 3.541-10.896-9.27-6.735h11.458zM291.843 177.217l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM356.698 177.217l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.27 6.734 3.542-10.896-9.27-6.735h11.458z"
              />
              <g>
                <path
                  d="M64.855 204.786l3.54 10.897h11.458l-9.27 6.734 3.542 10.897-9.27-6.734-9.269 6.734 3.54-10.897-9.269-6.734h11.458zM129.707 204.786l3.54 10.897h11.457l-9.269 6.734 3.54 10.897-9.268-6.734-9.27 6.734 3.541-10.897-9.27-6.734h11.458zM194.562 204.786l3.54 10.897h11.458l-9.27 6.734 3.541 10.897-9.27-6.734-9.268 6.734 3.54-10.897-9.269-6.734h11.457zM259.417 204.786l3.54 10.897h11.458l-9.27 6.734 3.541 10.897-9.269-6.734-9.27 6.734 3.542-10.897-9.27-6.734h11.458zM324.269 204.786l3.54 10.897h11.457l-9.269 6.734 3.54 10.897-9.268-6.734-9.27 6.734 3.541-10.897-9.27-6.734h11.458z"
                />
              </g>
            </g>
            <g>
              <path
                d="M32.427 232.356l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM97.28 232.356l3.541 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735H93.74zM162.136 232.356l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.269 6.734 3.54-10.896-9.269-6.735h11.458zM226.988 232.356l3.54 10.896h11.457l-9.269 6.735 3.54 10.896-9.268-6.734-9.27 6.734 3.541-10.896-9.27-6.735h11.458zM291.843 232.356l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.27-6.734-9.268 6.734 3.54-10.896-9.269-6.735h11.457zM356.698 232.356l3.54 10.896h11.458l-9.27 6.735 3.541 10.896-9.269-6.734-9.27 6.734 3.542-10.896-9.27-6.735h11.458z"
              />
            </g>
          </g>
        </g>
        <title>
          United States of America
        </title>
      </svg>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      jp
    </div>
    <div>
      <svg
        className="Flag__StyledFlag-sc-14ojzvi-0 brFYNI"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <defs>
          <clipPath
            id="jp_a"
          >
            <path
              d="M-88.001 32h640v480h-640z"
              fillOpacity=".67"
            />
          </clipPath>
        </defs>
        <g
          clipPath="url(#jp_a)"
          fillRule="evenodd"
          strokeWidth="1pt"
          transform="translate(88.001 -32)"
        >
          <path
            d="M-128 32h720v480h-720z"
            fill="#fff"
          />
          <ellipse
            cx="523.08"
            cy="344.05"
            fill="#d30000"
            rx="194.93"
            ry="194.93"
            transform="translate(-168.44 8.618) scale(.76554)"
          />
        </g>
        <title>
          Japan
        </title>
      </svg>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      cn
    </div>
    <div>
      <svg
        className="Flag__StyledFlag-sc-14ojzvi-0 brFYNI"
        focusable="false"
        role="img"
        viewBox="0 0 640 480"
      >
        <defs>
          <path
            d="M-.588.81L0-1 .588.81-.952-.31H.952z"
            fill="#ffde00"
            id="cn_a"
          />
        </defs>
        <path
          d="M0 0h640v480H0z"
          fill="#de2910"
        />
        <use
          height="20"
          transform="matrix(71.9991 0 0 72 119.999 120)"
          width="30"
          xlinkHref="#cn_a"
        />
        <use
          height="20"
          transform="matrix(-12.33562 -20.5871 20.58684 -12.33577 240.291 47.996)"
          width="30"
          xlinkHref="#cn_a"
        />
        <use
          height="20"
          transform="matrix(-3.38573 -23.75998 23.75968 -3.38578 287.95 95.796)"
          width="30"
          xlinkHref="#cn_a"
        />
        <use
          height="20"
          transform="matrix(6.5991 -23.0749 23.0746 6.59919 287.959 168.012)"
          width="30"
          xlinkHref="#cn_a"
        />
        <use
          height="20"
          transform="matrix(14.9991 -18.73557 18.73533 14.99929 239.933 216.054)"
          width="30"
          xlinkHref="#cn_a"
        />
        <title>
          China
        </title>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flag Default use 1`] = `
<svg
  className="Flag__StyledFlag-sc-14ojzvi-0 brFYNI"
  focusable="false"
  role="img"
  viewBox="0 0 640 480"
>
  <g
    transform="translate(50.082) scale(.9375)"
  >
    <g
      fillRule="evenodd"
      strokeWidth="1pt"
    >
      <path
        d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
        fill="#006aa7"
      />
      <path
        d="M-121.103 204.984h256v102.4h-256z"
        fill="#fecc00"
      />
      <path
        d="M133.843.01h102.4v511.997h-102.4z"
        fill="#fecc00"
      />
      <path
        d="M232.995 205.013h460.798v102.4H232.995z"
        fill="#fecc00"
      />
      <path
        d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
        fill="#006aa7"
      />
    </g>
  </g>
  <title>
    Sweden
  </title>
</svg>
`;

exports[`Storyshots Atoms | Flag Different size  1`] = `
<svg
  className="Flag__StyledFlag-sc-14ojzvi-0 kcbqVL"
  focusable="false"
  height={10}
  role="img"
  viewBox="0 0 640 480"
  width={10}
>
  <g
    transform="translate(50.082) scale(.9375)"
  >
    <g
      fillRule="evenodd"
      strokeWidth="1pt"
    >
      <path
        d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
        fill="#006aa7"
      />
      <path
        d="M-121.103 204.984h256v102.4h-256z"
        fill="#fecc00"
      />
      <path
        d="M133.843.01h102.4v511.997h-102.4z"
        fill="#fecc00"
      />
      <path
        d="M232.995 205.013h460.798v102.4H232.995z"
        fill="#fecc00"
      />
      <path
        d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
        fill="#006aa7"
      />
    </g>
  </g>
  <title>
    Sweden
  </title>
</svg>
`;

exports[`Storyshots Atoms | Flexbox Flexbox default 1`] = `
<div
  className="FlexboxContainer__StyledFlexbox-sc-1efwhdg-0 kvhUqX"
>
  <div
    className="FlexboxItem__StyledItem-uyxq1j-0 FlexboxItem__StyledItemWithHorisontalGutter-uyxq1j-1 flIvvs"
    size={3}
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 iVuNfs"
    >
      Col 1
    </div>
  </div>
  <div
    className="FlexboxItem__StyledItem-uyxq1j-0 FlexboxItem__StyledItemWithHorisontalGutter-uyxq1j-1 gLvGZa"
    size={6}
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 iVuNfs"
    >
      Col 2
    </div>
  </div>
  <div
    className="FlexboxItem__StyledItem-uyxq1j-0 FlexboxItem__StyledItemWithHorisontalGutter-uyxq1j-1 flIvvs"
    size={3}
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 iVuNfs"
    >
      Col 3
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox Flexbox with custom gutter 1`] = `
<div
  className="FlexboxContainer__StyledFlexbox-sc-1efwhdg-0 gNrjJB"
>
  <div
    className="FlexboxItem__StyledItem-uyxq1j-0 FlexboxItem__StyledItemWithHorisontalGutter-uyxq1j-1 gbPXqp"
    size={6}
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 iVuNfs"
    >
      Col 1
    </div>
  </div>
  <div
    className="FlexboxItem__StyledItem-uyxq1j-0 FlexboxItem__StyledItemWithHorisontalGutter-uyxq1j-1 gbPXqp"
    size={6}
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 iVuNfs"
    >
      Col 2
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox Flexbox with direction: column 1`] = `
<div
  className="FlexboxContainer__StyledFlexbox-sc-1efwhdg-0 jmuCEd"
  direction="column"
>
  <div
    className="FlexboxItem__StyledItem-uyxq1j-0 FlexboxItem__StyledItemWithVerticalGutter-uyxq1j-2 goOQKU"
    order={2}
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 iVuNfs"
    >
      Col 1
    </div>
  </div>
  <div
    className="FlexboxItem__StyledItem-uyxq1j-0 FlexboxItem__StyledItemWithVerticalGutter-uyxq1j-2 epkXgE"
    order={1}
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 iVuNfs"
    >
      Col 2
    </div>
  </div>
  <div
    className="FlexboxItem__StyledItem-uyxq1j-0 FlexboxItem__StyledItemWithVerticalGutter-uyxq1j-2 hCMvsg"
    order={3}
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 iVuNfs"
    >
      Col 3
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Icon Available icons 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      ChevronDown
    </div>
    <div>
      <svg
        aria-hidden="true"
        className="IconBase__StyledIconBase-sc-10cbji3-0 lnoZLc"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <polygon
          points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
        />
      </svg>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      ChevronUp
    </div>
    <div>
      <svg
        aria-hidden="true"
        className="IconBase__StyledIconBase-sc-10cbji3-0 lnoZLc"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <polygon
          points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
          transform="rotate(-180 12 12)"
        />
      </svg>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      ArrowRight
    </div>
    <div>
      <svg
        aria-hidden="true"
        className="IconBase__StyledIconBase-sc-10cbji3-0 lnoZLc"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <polygon
          points="16.278 14 0 14 0 10 16.278 10 8.211 2 13.916 2 24 12 21.148 14.828 13.916 22 8.211 22"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Icon Default use 1`] = `
<svg
  aria-hidden="true"
  className="IconBase__StyledIconBase-sc-10cbji3-0 lnoZLc"
  focusable="false"
  role="presentation"
  viewBox="0 0 24 24"
>
  <polygon
    points="16.278 14 0 14 0 10 16.278 10 8.211 2 13.916 2 24 12 21.148 14.828 13.916 22 8.211 22"
  />
</svg>
`;

exports[`Storyshots Atoms | Icon Different size and color 1`] = `
<svg
  aria-hidden="true"
  className="IconBase__StyledIconBase-sc-10cbji3-0 hBhGmd"
  focusable="false"
  role="presentation"
  size={10}
  viewBox="0 0 24 24"
>
  <polygon
    points="16.278 14 0 14 0 10 16.278 10 8.211 2 13.916 2 24 12 21.148 14.828 13.916 22 8.211 22"
  />
</svg>
`;

exports[`Storyshots Atoms | List Basic ordered list 1`] = `
<ol
  className="List__StyledList-sc-67l9u3-0 wlTZH"
>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item 1
  </li>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item 2
  </li>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item 3
  </li>
</ol>
`;

exports[`Storyshots Atoms | List Basic unordered list 1`] = `
<ul
  className="List__StyledList-sc-67l9u3-0 wlTZH"
>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item
  </li>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item
  </li>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item
  </li>
</ul>
`;

exports[`Storyshots Atoms | ListItem Basic list item 1`] = `
<ul>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item
  </li>
</ul>
`;

exports[`Storyshots Atoms | Media Basic usage 1`] = `
Array [
  <div
    className="Media__StyledDiv-sc-1dic02p-0 eEsbmZ"
  >
    I am only shown on screens smaller than medium size
  </div>,
  <div
    className="Media__StyledDiv-sc-1dic02p-0 idwWqU"
  >
    I am only shown between medium and large sizes
  </div>,
  <div
    className="Media__StyledDiv-sc-1dic02p-0 coUHet"
  >
    I am only shown on screens bigger than large size
  </div>,
]
`;

exports[`Storyshots Atoms | Separator Separator default 1`] = `
<div
  className="Separatorstories__StyledContainer-sc-12j0h8a-0 ixCTfH"
>
  <div
    className="Separator__StyledSeparator-a5vdsz-0 eEBmzS"
  />
</div>
`;

exports[`Storyshots Atoms | Separator Separator vertical 1`] = `
<div
  className="Separatorstories__StyledContainer-sc-12j0h8a-0 ixCTfH"
>
  <div
    className="Separator__StyledSeparator-a5vdsz-0 ePNKxP"
  />
</div>
`;

exports[`Storyshots Atoms | Text Colors 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Default
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 cmCWWJ"
      >
        Default
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Color: text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 cmCWWJ"
      >
        Text
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Color: positive
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 gcIsAz"
      >
        Positive
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Color: negative
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 hCpHGw"
      >
        Negative
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Color: warning
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 kLDCRD"
      >
        Warning
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Color: cta
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 eEIqHm"
      >
        CTA
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Color: label
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 foWpFZ"
      >
        Label
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Text Primary 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Primary text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 cmCWWJ"
      >
        Primary text
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Primary bold text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 cHZfwv"
      >
        Primary bold text
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Primary extrabold text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 bnIaaO"
      >
        Primary extrabold text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Text Secondary 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Secondary text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 laXMaY"
      >
        Secondary text
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Secondary bold text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 gHlEVt"
      >
        Secondary bold text
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Secondary extrabold text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 iXItug"
      >
        Secondary extrabold text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Text Tertiary 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Tertiary text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 kBKleW"
      >
        Tertiary text
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Tertiary bold text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 lnwQxH"
      >
        Tertiary bold text
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Tertiary extrabold text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 bjBurG"
      >
        Tertiary extrabold text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Text Title1 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 iUYKst"
>
  Title1 text
</span>
`;

exports[`Storyshots Atoms | Text Title3 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 joblfr"
>
  Title3 text
</span>
`;

exports[`Storyshots Molecules | Avatar Basic usage 1`] = `
<div
  className="Avatar__StyledDiv-a8mb4w-0 igAJTE"
>
  <span
    className="Text__StyledText-sc-1974afi-0 cEGWcE"
  >
    ASK
  </span>
</div>
`;

exports[`Storyshots Molecules | Button Button primary with size modified 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 iahwSN"
  direction="row"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 buAJms"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 eVoBs"
    >
      Small
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 jjxzVi"
        onClick={[Function]}
        size="s"
        type="button"
      >
        <span
          className="Text__StyledText-sc-1974afi-0 jVjxzY"
        >
          Small
        </span>
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 buAJms"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 eVoBs"
    >
      Medium
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 dugpYI"
        onClick={[Function]}
        size="m"
        type="button"
      >
        <span
          className="Text__StyledText-sc-1974afi-0 jVjxzY"
        >
          Medium
        </span>
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 buAJms"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 eVoBs"
    >
      Large
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 byIuXa"
        onClick={[Function]}
        size="l"
        type="button"
      >
        <span
          className="Text__StyledText-sc-1974afi-0 bBiCvk"
        >
          Large
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button secondary with size modified 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 iahwSN"
  direction="row"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 buAJms"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 eVoBs"
    >
      Small
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kZIyEw"
        onClick={[Function]}
        size="s"
        type="button"
      >
        <span
          className="Text__StyledText-sc-1974afi-0 jVjxzY"
        >
          Small
        </span>
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 buAJms"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 eVoBs"
    >
      Medium
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kEUmvh"
        onClick={[Function]}
        size="m"
        type="button"
      >
        <span
          className="Text__StyledText-sc-1974afi-0 jVjxzY"
        >
          Medium
        </span>
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 buAJms"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 eVoBs"
    >
      Large
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kygVIR"
        onClick={[Function]}
        size="l"
        type="button"
      >
        <span
          className="Text__StyledText-sc-1974afi-0 bBiCvk"
        >
          Large
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button with type modified 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Reset
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 dugpYI"
        onClick={[Function]}
        type="reset"
      >
        <span
          className="Text__StyledText-sc-1974afi-0 jVjxzY"
        >
          Reset
        </span>
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Submit
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 dugpYI"
        onClick={[Function]}
        type="submit"
      >
        <span
          className="Text__StyledText-sc-1974afi-0 jVjxzY"
        >
          Submit
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button with variant 1`] = `
<button
  className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kEUmvh"
  onClick={[Function]}
  type="button"
>
  <span
    className="Text__StyledText-sc-1974afi-0 jVjxzY"
  >
    Button
  </span>
</button>
`;

exports[`Storyshots Molecules | Button Default usage 1`] = `
<button
  className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 dugpYI"
  onClick={[Function]}
  type="button"
>
  <span
    className="Text__StyledText-sc-1974afi-0 jVjxzY"
  >
    Button
  </span>
</button>
`;

exports[`Storyshots Molecules | Button Disabled button 1`] = `
<button
  className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 cWJwss"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="Text__StyledText-sc-1974afi-0 jVjxzY"
  >
    Button
  </span>
</button>
`;

exports[`Storyshots Molecules | LabeledValue LabeledValue secondary currency 1`] = `
<div
  className="LabeledValue__StyledLabeledValue-hatse2-0 drexN"
>
  <div
    className="LabeledValue__StyledLabel-hatse2-1 eNBnEP"
  >
    <span
      className="Text__StyledText-sc-1974afi-0 gdLuLT"
    >
      Market value
    </span>
  </div>
  <span
    className="Text__StyledText-sc-1974afi-0 gHlEVt"
  >
    SEK 4,672,198.00
  </span>
</div>
`;

exports[`Storyshots Molecules | LabeledValue LabeledValue title1 1`] = `
<div
  className="LabeledValue__StyledLabeledValue-hatse2-0 drexN"
>
  <div
    className="LabeledValue__StyledLabel-hatse2-1 eNBnEP"
  >
    <span
      className="Text__StyledText-sc-1974afi-0 gdLuLT"
    >
      Holdings (SEK)
    </span>
  </div>
  <span
    className="Text__StyledText-sc-1974afi-0 iUYKst"
  >
    4713119
  </span>
</div>
`;

exports[`Storyshots Molecules | LabeledValue LabeledValue with negative development and currency 1`] = `
<div
  className="LabeledValue__StyledLabeledValue-hatse2-0 drexN"
>
  <div
    className="LabeledValue__StyledLabel-hatse2-1 eNBnEP"
  >
    <span
      className="Text__StyledText-sc-1974afi-0 gdLuLT"
    >
      Development this year
    </span>
  </div>
  <div
    className="LabeledValuestories__StyledChildsContainer-sc-1raww2x-0 eEzclV"
  >
    <div
      className="LabeledValuestories__StyledDevContainer-sc-1raww2x-1 eLCfNR"
    >
      <span
        className="Text__StyledText-sc-1974afi-0 jWluYu"
      >
        ▼
        -9.2
        %
      </span>
    </div>
    <span
      className="Text__StyledText-sc-1974afi-0 gHlEVt"
    >
      -SEK 4,672,198.00
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | LabeledValue LabeledValue with positive development and currency 1`] = `
<div
  className="LabeledValue__StyledLabeledValue-hatse2-0 drexN"
>
  <div
    className="LabeledValue__StyledLabel-hatse2-1 eNBnEP"
  >
    <span
      className="Text__StyledText-sc-1974afi-0 gdLuLT"
    >
      Development this year
    </span>
  </div>
  <div
    className="LabeledValuestories__StyledChildsContainer-sc-1raww2x-0 eEzclV"
  >
    <div
      className="LabeledValuestories__StyledDevContainer-sc-1raww2x-1 eLCfNR"
    >
      <span
        className="Text__StyledText-sc-1974afi-0 bmOtmq"
      >
        ▲
        +
        9.2
        %
      </span>
    </div>
    <span
      className="Text__StyledText-sc-1974afi-0 gHlEVt"
    >
      SEK 4,672,198.00
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Link Default usage 1`] = `
<a
  className="Link__StyledLink-apj04t-0 dJiWQG"
  href="/startpage"
  onClick={[Function]}
>
  <span
    className="Text__StyledText-sc-1974afi-0 bpEPBt"
  >
    Link
  </span>
</a>
`;

exports[`Storyshots Molecules | Link Link with _blank target 1`] = `
<a
  className="Link__StyledLink-apj04t-0 dJiWQG"
  href="/www.google.com"
  onClick={[Function]}
  target="_blank"
>
  <span
    className="Text__StyledText-sc-1974afi-0 bpEPBt"
  >
    Link
  </span>
</a>
`;

exports[`Storyshots Theme Colors (palette) 1`] = `
Array [
  <h1>
    ⚠️ Internal object, use colors (semantic)
  </h1>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
    direction="column"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        brandBlue
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 kOmGCZ"
          color="#00C8F5"
        />
        <div>
          #00C8F5
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        brandGreen
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 dcCMPu"
          color="#D2F500"
        />
        <div>
          #D2F500
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        brandPink
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 frFZiK"
          color="#FF2B83"
        />
        <div>
          #FF2B83
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        brandTurquoise
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 bEZtkc"
          color="#00F0E1"
        />
        <div>
          #00F0E1
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        complementaryBlue1
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 fZBGro"
          color="#385E9D"
        />
        <div>
          #385E9D
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        complementaryBlue2
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 JcyXL"
          color="#131F4F"
        />
        <div>
          #131F4F
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        complementaryGreen1
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 iYFqke"
          color="#3A913F"
        />
        <div>
          #3A913F
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        complementaryGreen2
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 daMTqK"
          color="#023C00"
        />
        <div>
          #023C00
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        complementaryPink1
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 hIOCjj"
          color="#AC135A"
        />
        <div>
          #AC135A
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        complementaryPink2
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 kxTlod"
          color="#78013A"
        />
        <div>
          #78013A
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        complementaryTurquoise1
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 jvRuIw"
          color="#009195"
        />
        <div>
          #009195
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        complementaryTurquoise2
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 kkcTjo"
          color="#01424C"
        />
        <div>
          #01424C
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        black
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 ieWnBj"
          color="#000000"
        />
        <div>
          #000000
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        gray0
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 kSpBvQ"
          color="#282823"
        />
        <div>
          #282823
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        gray1
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 kwZsJL"
          color="#4B4B46"
        />
        <div>
          #4B4B46
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        gray2
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 lkTHRk"
          color="#6E6E69"
        />
        <div>
          #6E6E69
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        gray3
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 kMjKh"
          color="#A0A09B"
        />
        <div>
          #A0A09B
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        gray4
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 gTPmLe"
          color="#BCBCB6"
        />
        <div>
          #BCBCB6
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        gray5
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 iqDMOi"
          color="#D7D7D2"
        />
        <div>
          #D7D7D2
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        gray6
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 dsXKsO"
          color="#EBEBE8"
        />
        <div>
          #EBEBE8
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        gray7
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 dUSBgM"
          color="#F5F5F5"
        />
        <div>
          #F5F5F5
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        white
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 hBnfLF"
          color="#FFFFFF"
        />
        <div>
          #FFFFFF
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        cta
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 dBlEpN"
          color="#0046FF"
        />
        <div>
          #0046FF
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        positive
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 dwSKTR"
          color="#00D200"
        />
        <div>
          #00D200
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        negative
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 dgVkns"
          color="#FF1900"
        />
        <div>
          #FF1900
        </div>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
      >
        index
      </div>
      <div>
        <div
          className="Themestories__Color-skwibd-0 bOsXQs"
          color="#FFCF00"
        />
        <div>
          #FFCF00
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Theme Colors (semantic) 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      background
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 dUSBgM"
        color="#F5F5F5"
      />
      <div>
        #F5F5F5
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      backgroundDark
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 kSpBvQ"
        color="#282823"
      />
      <div>
        #282823
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      buttonSecondaryBackground
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 hBnfLF"
        color="#FFFFFF"
      />
      <div>
        #FFFFFF
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      buttonText
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 hBnfLF"
        color="#FFFFFF"
      />
      <div>
        #FFFFFF
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      buy
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 dBlEpN"
        color="#0046FF"
      />
      <div>
        #0046FF
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      card
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 hBnfLF"
        color="#FFFFFF"
      />
      <div>
        #FFFFFF
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      cta
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 dBlEpN"
        color="#0046FF"
      />
      <div>
        #0046FF
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      disabled
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 iqDMOi"
        color="#D7D7D2"
      />
      <div>
        #D7D7D2
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      divider
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 dsXKsO"
        color="#EBEBE8"
      />
      <div>
        #EBEBE8
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      label
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 lkTHRk"
        color="#6E6E69"
      />
      <div>
        #6E6E69
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      module
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 hBnfLF"
        color="#FFFFFF"
      />
      <div>
        #FFFFFF
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      negative
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 dgVkns"
        color="#FF1900"
      />
      <div>
        #FF1900
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      positive
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 dwSKTR"
        color="#00D200"
      />
      <div>
        #00D200
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      sell
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 dgVkns"
        color="#FF1900"
      />
      <div>
        #FF1900
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      text
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 kSpBvQ"
        color="#282823"
      />
      <div>
        #282823
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      textLight
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 hBnfLF"
        color="#FFFFFF"
      />
      <div>
        #FFFFFF
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      warning
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 bOsXQs"
        color="#FFCF00"
      />
      <div>
        #FFCF00
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Theme Screen sizes 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      xs
    </div>
    <div>
      <pre>
        360
      </pre>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      sm
    </div>
    <div>
      <pre>
        768
      </pre>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      md
    </div>
    <div>
      <pre>
        992
      </pre>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      lg
    </div>
    <div>
      <pre>
        1440
      </pre>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      xl
    </div>
    <div>
      <pre>
        1680
      </pre>
    </div>
  </div>
</div>
`;
